tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Close File - ID 48.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20120706 MrW 

Datei schließen [ ⚠️ PARAMETER "DataSourceReference" NOT PARSED ⚠️ ]
