tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/GRR Colors - ID 110.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20120706 MrW 

Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️
Wenn [ Hole ( LayoutTabellenname ) <> "_Color" ]
	Gehe zu Layout [ Layout: "Colors" ; Animation: Ohne ]
	Alle Datensätze anzeigen
	Nur Ausgeschlossene anzeigen
Ende (wenn)
