tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/GRR GUI-Syntax - ID 111.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20140423 MrW  Corrected
# 20120706 MrW 

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

Gehe zu Bezugsdatensatz [ ⚠️ PARAMETER "Related" NOT PARSED ⚠️ ]
Wenn [ NICHT _IsLayoutTableName( _GUISyntax::__ID ) ]
	Gehe zu Layout [ Layout: "GUISyntax" ; Animation: Ohne ]
	Alle Datensätze anzeigen
	Nur Ausgeschlossene anzeigen
Ende (wenn)
