tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Halt Script - ID 147.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20130627 MrW  Show status bar
# 20130618 MrW 

Werkzeugleisten ein-/ausblenden [ Fixieren: OFF ; Mit Datensatz-bearbeiten-Werkzeugleiste : OFF ; Einblenden ]
Alle Scripts abbrechen
