tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Resort Syntax - ID 185.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20170519 MrW Resort, grouping commands together

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

# Syntax
Script ausführen [ Aus Liste ; "Show All Syntax" ]

Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️

Ersetze alle Feldwerte [ _Syntax::Sort ; Durch fortlaufende Nummern ersetzen ; Eingabeoptionen aktualisieren: ON ; Initial: 1 ; Interval: 1 ]
