tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Toggle Toolbar - ID 29.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20120106 MrW

Fehleraufzeichnung setzen [ ON ]
AnwenderAbbruchZulassen setzen [ OFF ]

Werkzeugleisten ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "29" ] ⚠️⚠️⚠️
